--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,7 @@ include:
     shield: corne_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nrfmicro/nrf52840/flipped@1.1
+    shield: corne_left
+  - board: nrfmicro/nrf52840/flipped@1.1
+    shield: corne_right
